test_suite/alan-2022-examples/failing/000510_mutation.alan
source t0 begin = while 349 do relax end end
